<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ending"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.aku.hassannaqvi.maamta_crf.activities.EndingActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/istatus"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:id="@+id/istatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:id="@+id/istatusa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/istatusa" />

                <RadioButton
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:id="@+id/istatusb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/istatusb" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/end_interview"
                    android:textColor="#ff1e1e"
                    android:textSize="32sp" />

            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>
